<resources>
    <string name="app_name">CoolEyepetizer</string>

    <!--net-->
    <string name="netError">网络错误</string>
    <string name="netTimeout">网络超时</string>
    <string name="unKnowError">未知异常</string>
    <string name="error_401">[401错误可能: 未授权 \\ 授权登录失败 \\ 登录过期]</string>
    <string name="error_403">403没权限哦</string>
    <string name="error_404">404没找到哦</string>
    <string name="error_422">422异常，提交数据格式不对吧？</string>
    <string name="error_402">402请求参数异常</string>

    <!--loading_view-->
    <string name="loading_error_text">加载失败,点击重试</string>
    <string name="loading_progress_text">努力加载中...</string>
    <string name="loading">加载中···</string>

    <string name="bottom_title_homepage">首页</string>
    <string name="bottom_title_community">社区</string>
    <string name="bottom_title_notify">通知</string>
    <string name="bottom_title_personal">我的</string>
    <string name="bottom_end">- The End -</string>

    <!--home-->
    <string name="find">发现</string>
    <string name="recommend">推荐</string>
    <string name="daily">日报</string>
    <string name="culling">精选</string>
    <string name="author_sub_title">%s  /  #%s</string>
    <string name="hot_rank">热门排行</string>
    <string name="theme_square">主题广场</string>
    <string name="cull_day">每日开眼精选</string>
    <string name="category_all">所有分类</string>

    <!--recommend-->
    <string name="follow">关注</string>
    <string name="category">分类</string>
    <string name="category_name">#%s</string>
    <string name="add_follow">+关注</string>

    <!--community-->
    <string name="more">更多</string>
    <string name="join">+ 立即参与</string>
    <string name="view_join">%s人浏览  /  #%s人参与</string>
    <string name="release_date">%s发布：</string>

    <!--notify-->
    <string name="push">推送</string>
    <string name="interact">互动</string>

    <!--video_detail-->
    <string name="pull_down_close_page">下 拉 关 闭 页 面</string>
    <string name="favorites">收藏</string>
    <string name="cache">缓存</string>
    <string name="plus_follow">+关注</string>
    <string name="photo_count">%1$d/%2$d</string>

    <!--mine-->
    <string name="guide_login_tips">点击登录即可评论及发布内容</string>
    <string name="my_follow">我的关注</string>
    <string name="watch_record">观看记录</string>
    <string name="notification_toggle">通知开关</string>
    <string name="my_badge">我的徽章</string>
    <string name="feedback">意见反馈</string>
    <string name="want_contribute">我要投稿</string>

    <!--theatre-->
    <string name="film_showing">热映</string>
    <string name="film_coming">上映</string>
    <string name="director">导演：</string>
    <string name="actors">主演：</string>
    <string name="movie_type">类型：</string>
    <string name="movie_score">评分：</string>
    <string name="movie_showing_time">上映时间：</string>
    <string name="movie_time_length">片长：</string>


</resources>
