<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMore"
                android:layout_width="@dimen/dp_48"
                android:layout_height="@dimen/dp_48"
                android:padding="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_more_black_19dp" />

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivAvatar"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo_black_76dp"
                app:civ_border_color="#cdcdcd"
                app:civ_border_width="1dp"
                android:layout_marginTop="@dimen/dp_65"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:civ_circle_background_color="#ededed" />

        <com.cooleyepetizer.app.view.TypefaceTextView
                android:id="@+id/tvLoginTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/guide_login_tips"
                android:textSize="12sp"
                app:typeface="fzlLTypeface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAvatar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLoginTips">

            <View
                    android:id="@+id/viewVerticalLine"
                    android:layout_width="1px"
                    android:layout_height="26dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:background="@color/color_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <com.cooleyepetizer.app.view.TypefaceTextView
                    android:id="@+id/tvFavorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_favorite_border_black_20dp"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/favorites"
                    android:textColor="@color/color_mine_text"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/viewVerticalLine"
                    app:layout_constraintEnd_toStartOf="@+id/viewVerticalLine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/viewVerticalLine"
                    app:typeface="fzlLTypeface" />

            <com.cooleyepetizer.app.view.TypefaceTextView
                    android:id="@+id/tvCache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_cache_black_16dp"
                    android:drawablePadding="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/cache"
                    android:textColor="@color/color_mine_text"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/viewVerticalLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewVerticalLine"
                    app:layout_constraintTop_toTopOf="@+id/viewVerticalLine"
                    app:typeface="fzlLTypeface" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:id="@+id/viewHorizontalLine"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="19dp"
                android:background="@color/color_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_top"/>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewHorizontalLine">

            <LinearLayout
                    android:id="@+id/llScrollViewContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                <com.cooleyepetizer.app.view.TypefaceTextView
                        android:id="@+id/tvFollow"
                        style="@style/MineTextView"
                        android:paddingHorizontal="13dp"
                        android:text="@string/my_follow" />

                <com.cooleyepetizer.app.view.TypefaceTextView
                        android:id="@+id/tvWatchRecord"
                        style="@style/MineTextView"
                        android:text="@string/watch_record" />

                <com.cooleyepetizer.app.view.TypefaceTextView
                        android:id="@+id/tvNotificationToggle"
                        style="@style/MineTextView"
                        android:text="@string/notification_toggle" />

                <com.cooleyepetizer.app.view.TypefaceTextView
                        android:id="@+id/tvMyBadge"
                        style="@style/MineTextView"
                        android:text="@string/my_badge" />

                <com.cooleyepetizer.app.view.TypefaceTextView
                        android:id="@+id/tvFeedback"
                        style="@style/MineTextView"
                        android:text="@string/feedback" />

                <com.cooleyepetizer.app.view.TypefaceTextView
                        android:id="@+id/tvContribute"
                        style="@style/MineTextView"
                        android:text="@string/want_contribute" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>