<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bean"
            type="com.cooleyepetizer.app.entity.film.ShowingM" />
    </data>

    <RelativeLayout
            android:id="@+id/ll_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10">

            <ImageView
                    android:id="@+id/iv_cover"
                    android:layout_width="@dimen/dp_140"
                    android:layout_height="@dimen/dp_160"
                    android:layout_marginEnd="12dp"
                    android:scaleType="fitXY"
                    app:imageFromUrl="@{bean.img}"
                    tools:ignore="MissingConstraints" />

            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{bean.tCn}"
                    android:textColor="@color/textTitleColor"
                    android:textSize="@dimen/text_16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@+id/iv_cover"
                    app:layout_constraintTop_toTopOf="@+id/iv_cover" />

            <LinearLayout
                    android:id="@+id/ll_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textColor="@color/textTitleColor"
                        android:textSize="@dimen/text_13sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{bean.dN}"
                        android:textSize="@dimen/text_13sp" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/ll_director">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actors"
                        android:textColor="@color/textTitleColor"
                        android:textSize="@dimen/text_13sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@{bean.actors}"
                        android:textColor="@color/textTitleColor"
                        android:textSize="@dimen/text_13sp" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/ll_actors">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_type"
                        android:textColor="@color/textTitleColor"
                        android:textSize="@dimen/text_13sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@{bean.movieType}"
                        android:textColor="@color/textTitleColor"
                        android:textSize="@dimen/text_13sp" />
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text='@{@string/movie_score+bean.r}'
                    android:textColor="@color/textTitleColor"
                    android:textSize="@dimen/text_13sp"
                    app:layout_constraintBottom_toTopOf="@+id/view_line"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_title" />

            <View
                    android:id="@+id/view_line"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:background="@color/line_color"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_cover"
                    app:layout_constraintLeft_toRightOf="@+id/iv_cover" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

</layout>